# idata

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  README.md
p2p/: key
src/: address.rs  bytes.rs  group.rs  light.rs  main.rs  miner.rs  primitive.rs  proof.rs  rpc.rs  transaction.rs  wallet.rs
src/transaction/: anonymos.rs  exchange.rs  transfer.rs
