[package]
name = "idata"
version = "0.1.0"
edition = "2021"
authors = ["Sun"]
description = "iData."
keywords = ["cryptography", "cryptocurrency", "zkp", "data"]
categories = ["cryptography", "cryptocurrency"]
license = "MIT/Apache-2.0"

[workspace]
members = [
    "core",
]

[dependencies]
anyhow = "1.0"
idata-core = { version = "0.1", path = "./core" }
tdn = { git = "https://github.com/cypherlink/TDN", branch="main" } # default: one group, multiple layers
tokio = { version = "1", features = ["full"] }
